--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-is": "^19.1.1",
     "recharts": "^3.2.0",
     "simplex-noise": "^4.0.3",
     "tailwind-merge": "^3.3.1"
